--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -248,7 +248,7 @@ img {
   top: 0;
   left: 0;
   width: 100%;
-  height: 800px;
+  height: 700px;
   background: linear-gradient(180deg, 
               hsla(0, 0%, 0%, 0) 58%, 
               hsl(0, 0%, 0%) 78%);
@@ -272,6 +272,7 @@ img {
 .home__title {
   font-size: var(--biggest-font-size);
   margin-bottom: 1rem;
+  text-shadow: 10px 2px 4px rgba(0, 0, 0, 0.5); 
 }
 
 .home__description {
