--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -115,6 +115,13 @@ img {
 .section__title {
   text-align: center;
   font-size: var(--h1-font-size);
+  margin-bottom: 1rem;
+  text-shadow: 5px 2px 4px rgba(255, 255, 255, 0.2); 
+}
+
+.section__subtitle {
+  text-align: center;
+  font-size: var(--h3-font-size);
   margin-bottom: 1.5rem;
   text-shadow: 5px 2px 4px rgba(255, 255, 255, 0.2); 
 }
