--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -851,7 +851,7 @@ img {
 }
 
 .modal-events {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   position: fixed;
@@ -863,12 +863,36 @@ img {
   background: rgba(0, 0, 0, 0.4);
 }
 
+.modal-events.active {
+  display: flex;
+}
+
 .modal-events-container {
-  background: url('https://sohanews.sohacdn.com/2020/4/29/photo-1-15881305486421226484751.jpg');
-  height: 500px;
-  width: 800px;
-  object-fit: cover;
-  background-repeat: no-repeat;
+  position: relative;
+  width: 980px;
+  height: 560px;
+  padding: 10px 20px;
+}
+
+.modal-events__img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.modal-events__icon {
+  position: absolute;
+  right: 10px;
+  cursor: pointer;
+  font-size: 30px;
+  color: #333;
+}
+
+.modal-events__icon:hover {
+  color: #fff;
 }
 
 /*=============== OUTER ===============*/
@@ -1178,6 +1202,10 @@ img {
   justify-content: space-between;
 }
 
+.memory__comment-status {
+  height: 180px;
+}
+
 .memory__data {
   display: flex;
   align-items: center;
@@ -1196,7 +1224,7 @@ img {
 }
 
 .memory__comment {
-  margin-top: 1rem;
+  margin-top: 0.5rem;
 }
 
 .memory__comment-image {
